@@ -1,3 +1,11 @@
+2008-09-26  Chris Morley
+
+	* src/formats/fastsearchformat.cpp: Improved error message when
+	 target is SMARTS rather than SMILES. Bug #2129841
+	 
+	* src/formats/getinchi.cpp: small mod to avoid occasionally seeing
+	 a "quoted" InChI when there isn't one. (There ARE none in the wild.)
+	
 2008-09-23  Chris Morley
 	
 	* src/fingerprints/finger3.cpp: enhanced PatternFP which can take
